# clipper2.cpp

./: CMakeLists.txt  README.md  package.xml
inc/clipper2/: clipper.h  clipper_core.h
src/: clipper.cpp  clipper_core.cpp
test/: ClipperTest.sln  ClipperTest.vcxproj  svg.cpp  svg.h  test_clipper.cpp  tests.txt
